--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"hint": "node hints.js"
+		"hint": "node hints.js",
+		"clear-data": "npx -y rimraf .data"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "1.0.0-next.4",
