--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-		"hint": "node hints.js",
+		"hint": "node hinter.js",
 		"clear-data": "npx -y rimraf .data"
 	},
 	"devDependencies": {
@@ -19,7 +19,6 @@
 		"@types/cookie": "0.4.1",
 		"@typescript-eslint/eslint-plugin": "5.10.1",
 		"@typescript-eslint/parser": "5.10.1",
-		"cowsay": "1.5.0",
 		"eslint": "7.32.0",
 		"eslint-config-prettier": "8.3.0",
 		"eslint-plugin-svelte3": "3.2.1",
@@ -35,6 +34,7 @@
 	"dependencies": {
 		"@lukeed/uuid": "2.0.0",
 		"cookie": "0.4.1",
+		"cowsay2": "^2.0.4",
 		"svelte-markdown": "0.2.2"
 	}
 }
