--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"hint": "node hinter.js",
 		"clear-data": "npx -y rimraf .data",
-		"deploy": "find . -name '*.SOLUTION.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} \\; && vercel --prod"
+		"deploy": "find ./src -name '*.SOLUTION.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} \\; && vercel --prod"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "1.0.0-next.30",
