--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
 		"hint": "node hinter.js",
 		"clear-data": "npx -y rimraf .data",
-		"deploy": "find ./src -name '*.SOLUTION.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} \\; && vercel --prod"
+		"deploy": "cp -R . /tmp/booster2022-deploy && cd /tmp/booster2022-deploy && find ./src -name '*.SOLUTION.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} \\; && vercel --prod && rm -rf /tmp/booster2022-deploy"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "1.0.0-next.30",
