--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
 		"importsNotUsedAsValues": "error",
 		/**
 			TypeScript doesn't know about import usages in the template because it only sees the
-			script of a Svelte file. Therefore preserve all value imports. Requires TS 4.5 or higher.
+			script of a Svelte file. Therefore, preserve all value imports. Requires TS 4.5 or higher.
 		*/
 		"preserveValueImports": true,
 		"isolatedModules": true,
