--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
 	"name": "gather-your-party-with-svelte",
 	"version": "0.0.1",
 	"scripts": {
-		"dev": "svelte-kit dev",
-		"build": "svelte-kit build",
-		"package": "svelte-kit package",
-		"preview": "svelte-kit preview",
-		"check": "svelte-check --tsconfig ./tsconfig.json",
-		"check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
-		"lint": "prettier --ignore-path .gitignore --check --plugin-search-dir=. . && eslint --ignore-path .gitignore .",
-		"format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
+		"dev": "vite dev",
+		"build": "vite build",
+		"preview": "vite preview",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+		"lint": "prettier --ignore-path .gitignore --plugin-search-dir . --check . && eslint --ignore-path .gitignore .",
+		"format": "prettier --ignore-path .gitignore --plugin-search-dir . --write .",
 		"hint": "node hinter.js",
 		"clear-data": "npx -y rimraf .data",
-		"deploy": "cp -R . /tmp/booster2022-deploy && cd /tmp/booster2022-deploy && find ./src -name '*.SOLUTION.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} \\; && vercel --prod && rm -rf /tmp/booster2022-deploy"
+		"solve": "cp -R . /tmp/booster2022-deploy && cd /tmp/booster2022-deploy && find ./src -name '*.SOLUTION.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} \\;",
+		"deploy": "npm run solve && vercel --prod && rm -rf /tmp/booster2022-deploy"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "1.0.0-next.87",
-		"@sveltejs/kit": "1.0.0-next.288",
+		"@sveltejs/kit": "1.0.0-next.405",
 		"@types/cookie": "0.5.1",
 		"@typescript-eslint/eslint-plugin": "5.42.0",
 		"@typescript-eslint/parser": "5.42.0",
@@ -29,7 +29,8 @@
 		"svelte-check": "2.9.2",
 		"svelte-preprocess": "4.10.7",
 		"tslib": "2.4.1",
-		"typescript": "4.8.4"
+		"typescript": "4.8.4",
+		"vite": "3.2.3"
 	},
 	"type": "module",
 	"dependencies": {
