--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
 		"format": "prettier --ignore-path .gitignore --plugin-search-dir . --write .",
 		"hint": "node hinter.js",
 		"clear-data": "npx -y rimraf .data",
-		"solve": "cp -R . /tmp/booster2022-deploy && cd /tmp/booster2022-deploy && find ./src -name '*.SOLUTION.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} \\;",
-		"deploy": "npm run solve && vercel --prod && rm -rf /tmp/booster2022-deploy"
+		"solve": "find ./src -name '*.SOLUTION.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} ; && find ./src/routes -name 'SOLUTION.*.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} ; && find ./src/routes -type d -name '*.SOLUTION' -exec bash -c 'mv \"$0\"/* ${0/.SOLUTION/}/ ; rm -rf \"$0\"' {} ;",
+		"deploy": "cp -R . /tmp/booster2022-deploy && cd /tmp/booster2022-deploy && npm run solve && vercel --prod && rm -rf /tmp/booster2022-deploy"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "1.0.0-next.87",
