--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"hint": "node hinter.js",
 		"clear-data": "npx -y rimraf .data",
 		"solve": "find ./src -name '*.SOLUTION.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} ; && find ./src/routes -name 'SOLUTION.*.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} ; && find ./src/routes -type d -name '*.SOLUTION' -exec bash -c 'mv \"$0\"/* ${0/.SOLUTION/}/ ; rm -rf \"$0\"' {} ;",
-		"deploy": "cp -R . /tmp/booster2022-deploy && cd /tmp/booster2022-deploy && npm run solve && vercel --prod && rm -rf /tmp/booster2022-deploy"
+		"deploy": "cp -R . /tmp/booster2022-deploy && cd /tmp/booster2022-deploy && npm run solve && vercel --prod && rm -rf /tmp/booster2022-deploy",
+		"ci:build": "npm run solve && npm run build"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "1.0.0-next.87",
