--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 		"solve": "find ./src -name '*.SOLUTION.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} ; && find ./src/routes -name 'SOLUTION.*.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} ; && find ./src/routes -type d -name '*.SOLUTION' -exec bash -c 'mv \"$0\"/* ${0/.SOLUTION/}/' {} ;",
 		"ci:solve": "find ./src -name '*.SOLUTION.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} \\; && find ./src/routes -name 'SOLUTION.*.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} \\; && find ./src/routes -type d -name '*.SOLUTION' -exec bash -c 'mv \"$0\"/* ${0/.SOLUTION/}/' {} \\;",
 		"ci:build": "npm run ci:solve && npm run build",
-		"deploy": "cp -R . /tmp/booster2022-deploy && cd /tmp/booster2022-deploy && npm run solve && vercel --prod && rm -rf /tmp/booster2022-deploy"
+		"deploy": "cp -R . /tmp/gypws-deploy && cd /tmp/gypws-deploy && npm run solve && vercel --prod && rm -rf /tmp/gypws-deploy"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "1.0.0-next.87",
