--- a/package.json
+++ b/package.json
@@ -1,6 +1,26 @@
 {
 	"name": "gather-your-party-with-svelte",
 	"version": "1.0.0",
+	"description": "Workshop to learn Svelte by creating your own character creator!",
+	"keywords": [
+		"javascript",
+		"typescript",
+		"workshop",
+		"frontend",
+		"svelte",
+		"sveltekit"
+	],
+	"homepage": "https://gather-your-party-with-svelte.vercel.app/",
+	"license": "GPL-3.0-only",
+	"contributors": [
+		"Alexander Castillo <alexander.castillo@miles.no>",
+		"Dag Erik Løvgren <dag.erik.lovgren@miles.no>"
+	],
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/miles-no/gather-your-party-with-svelte"
+	},
+	"type": "module",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -15,6 +35,12 @@
 		"ci:solve": "find ./src -name '*.SOLUTION.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} \\; && find ./src/routes -name 'SOLUTION.*.svelte' -exec bash -c 'mv $0 ${0/SOLUTION./}' {} \\; && find ./src/routes -type d -name '*.SOLUTION' -exec bash -c 'mv \"$0\"/* ${0/.SOLUTION/}/' {} \\;",
 		"ci:build": "npm run ci:solve && npm run build",
 		"deploy": "cp -R . /tmp/gypws-deploy && cd /tmp/gypws-deploy && npm run solve && vercel --prod && rm -rf /tmp/gypws-deploy"
+	},
+	"dependencies": {
+		"@lukeed/uuid": "2.0.0",
+		"cookie": "0.5.0",
+		"cowsay2": "2.0.4",
+		"svelte-markdown": "0.2.3"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "1.0.0-next.87",
@@ -33,12 +59,5 @@
 		"tslib": "2.4.1",
 		"typescript": "4.8.4",
 		"vite": "3.2.3"
-	},
-	"type": "module",
-	"dependencies": {
-		"@lukeed/uuid": "2.0.0",
-		"cookie": "0.5.0",
-		"cowsay2": "2.0.4",
-		"svelte-markdown": "0.2.3"
 	}
 }
