--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "gather-your-party-with-svelte",
-	"version": "1.0.4",
+	"version": "1.0.5",
 	"description": "Workshop to learn Svelte by creating your own character creator!",
 	"keywords": [
 		"javascript",
@@ -43,21 +43,21 @@
 		"svelte-markdown": "0.2.3"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "1.0.0-next.87",
-		"@sveltejs/kit": "1.0.0-next.538",
+		"@sveltejs/adapter-auto": "1.0.0",
+		"@sveltejs/kit": "1.0.0",
 		"@types/cookie": "0.5.1",
-		"@typescript-eslint/eslint-plugin": "5.42.1",
-		"@typescript-eslint/parser": "5.42.1",
-		"eslint": "8.27.0",
+		"@typescript-eslint/eslint-plugin": "5.46.1",
+		"@typescript-eslint/parser": "5.46.1",
+		"eslint": "8.29.0",
 		"eslint-config-prettier": "8.5.0",
 		"eslint-plugin-svelte3": "4.0.0",
-		"prettier": "2.7.1",
-		"prettier-plugin-svelte": "2.8.0",
-		"svelte": "3.52.0",
-		"svelte-check": "2.9.2",
-		"svelte-preprocess": "4.10.7",
+		"prettier": "2.8.1",
+		"prettier-plugin-svelte": "2.9.0",
+		"svelte": "3.55.0",
+		"svelte-check": "2.10.2",
+		"svelte-preprocess": "5.0.0",
 		"tslib": "2.4.1",
-		"typescript": "4.8.4",
-		"vite": "3.2.3"
+		"typescript": "4.9.4",
+		"vite": "4.0.1"
 	}
 }
