--- a/package.json
+++ b/package.json
@@ -37,27 +37,28 @@
 		"deploy": "cp -R . /tmp/gypws-deploy && cd /tmp/gypws-deploy && npm run solve && vercel --prod && rm -rf /tmp/gypws-deploy"
 	},
 	"dependencies": {
-		"@lukeed/uuid": "2.0.0",
+		"@lukeed/uuid": "2.0.1",
 		"cookie": "0.5.0",
 		"cowsay2": "2.0.4",
 		"svelte-markdown": "0.2.3"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "1.0.0",
-		"@sveltejs/kit": "1.0.0",
+		"@sveltejs/adapter-auto": "2.1.0",
+		"@sveltejs/adapter-vercel": "^3.0.0",
+		"@sveltejs/kit": "1.18.0",
 		"@types/cookie": "0.5.1",
-		"@typescript-eslint/eslint-plugin": "5.46.1",
-		"@typescript-eslint/parser": "5.46.1",
-		"eslint": "8.29.0",
-		"eslint-config-prettier": "8.5.0",
+		"@typescript-eslint/eslint-plugin": "5.59.7",
+		"@typescript-eslint/parser": "5.59.7",
+		"eslint": "8.41.0",
+		"eslint-config-prettier": "8.8.0",
 		"eslint-plugin-svelte3": "4.0.0",
-		"prettier": "2.8.1",
-		"prettier-plugin-svelte": "2.9.0",
-		"svelte": "3.55.0",
-		"svelte-check": "2.10.2",
-		"svelte-preprocess": "5.0.0",
-		"tslib": "2.4.1",
-		"typescript": "4.9.4",
-		"vite": "4.0.1"
+		"prettier": "2.8.8",
+		"prettier-plugin-svelte": "2.10.0",
+		"svelte": "3.59.1",
+		"svelte-check": "3.3.2",
+		"svelte-preprocess": "5.0.3",
+		"tslib": "2.5.2",
+		"typescript": "5.0.4",
+		"vite": "4.3.8"
 	}
 }
